outputs/output.319736.out
  File "/home/u00786/Research/optimization/runNumerical.py", line 41
    "coef":None,
    ^
SyntaxError: invalid syntax
